--- a/Sources/Resources/Nibs/FeedbackTableViewCell.xib
+++ b/Sources/Resources/Nibs/FeedbackTableViewCell.xib
@@ -28,7 +28,7 @@
                                 <color key="backgroundColor" name="FeedBackButtonColor"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button">
+                                <state key="normal">
                                     <imageReference key="image" image="hand.thumbsup" catalog="system" symbolScale="large"/>
                                 </state>
                             </button>
@@ -37,7 +37,7 @@
                                 <color key="backgroundColor" name="FeedBackButtonColor"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button">
+                                <state key="normal">
                                     <imageReference key="image" image="hand.thumbsdown" catalog="system" symbolScale="large"/>
                                 </state>
                             </button>
@@ -66,8 +66,10 @@
                                     <constraint firstAttribute="width" constant="35" id="L3C-eF-bRy"/>
                                 </constraints>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="xmark" catalog="system"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="xmark" catalog="system" symbolScale="large"/>
+                                </state>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqp-sv-xjJ">
                                 <rect key="frame" x="0.0" y="50" width="485" height="450"/>
