--- a/DawnLib-Test/Sources/Resources/Nibs/ChatHeaderView.xib
+++ b/DawnLib-Test/Sources/Resources/Nibs/ChatHeaderView.xib
@@ -6,25 +6,24 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ChatHeaderView" customModule="DawnLib_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="497" height="457"/>
+            <rect key="frame" x="0.0" y="0.0" width="429" height="255"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y62-n5-l0c">
-                    <rect key="frame" x="0.0" y="0.0" width="497" height="457"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y62-n5-l0c">
+                    <rect key="frame" x="0.0" y="0.0" width="429" height="255"/>
+                    <color key="tintColor" name="TextColor"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="40"/>
                     <color key="textColor" name="TextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="y62-n5-l0c" secondAttribute="trailing" id="JX8-kO-oNt"/>
                 <constraint firstAttribute="bottom" secondItem="y62-n5-l0c" secondAttribute="bottom" id="Nsh-55-G9C"/>
@@ -35,15 +34,12 @@
             <connections>
                 <outlet property="headingLabel" destination="y62-n5-l0c" id="ajy-91-jGP"/>
             </connections>
-            <point key="canvasLocation" x="129.00763358778624" y="-185.56338028169014"/>
+            <point key="canvasLocation" x="77.099236641221367" y="-256.69014084507046"/>
         </view>
     </objects>
     <resources>
         <namedColor name="TextColor">
             <color red="0.25882352941176473" green="0.25882352941176473" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
