--- a/DawnLib-Test/Sources/Resources/Nibs/QuestionTableViewCell.xib
+++ b/DawnLib-Test/Sources/Resources/Nibs/QuestionTableViewCell.xib
@@ -31,7 +31,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I always wake up tired." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtV-RA-8eT">
                         <rect key="frame" x="68" y="20.666666666666668" width="199" height="18.000000000000004"/>
                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" name="TextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -57,6 +57,9 @@
         <image name="message" width="32" height="32"/>
         <namedColor name="QuestionBGColor">
             <color red="0.90980392156862744" green="0.94509803921568625" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextColor">
+            <color red="0.25882352941176473" green="0.25882352941176473" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
