--- a/DawnLib-Test/Sources/Resources/Nibs/ResponseTableViewCell.xib
+++ b/DawnLib-Test/Sources/Resources/Nibs/ResponseTableViewCell.xib
@@ -18,10 +18,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="444" height="240"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Flj-JB-Wkj">
-                        <rect key="frame" x="15" y="0.0" width="414" height="21.666666666666668"/>
-                        <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="18"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fregthryrtgerfwed" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Flj-JB-Wkj">
+                        <rect key="frame" x="15" y="0.0" width="414" height="20.666666666666668"/>
+                        <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="18"/>
+                        <color key="textColor" name="TextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -42,6 +42,9 @@
     <resources>
         <namedColor name="PrimaryColor">
             <color red="0.61568627450980395" green="0.15686274509803921" blue="0.44705882352941179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextColor">
+            <color red="0.25882352941176473" green="0.25882352941176473" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
